# chemlit

./: .gitignore  crossref_debug_tool.py  journal_integration_example.py  journal_mappings.csv  pyproject.toml  run_server.py  simple_crossref_test.py  test_publisher_variations_simple.py  year_debugging_tool.py
migration/helpers/: code_migration.py  data_migration.py  validation.py
migration/scripts/: cleanup.py  migrate_endpoints.py  validate_migration.py
src/chemlit_extractor/: main.py
src/chemlit_extractor/api/v1/: api.py
src/chemlit_extractor/api/v1/endpoints/: articles.py  authors.py  compounds.py  files.py  register.py  stats.py  ui.py
src/chemlit_extractor/core/: __init__.py  config.py
src/chemlit_extractor/database/: __init__.py  connection.py  crud.py  models.py
src/chemlit_extractor/models/: __init__.py  schemas.py
src/chemlit_extractor/services/: __init__.py  article_service.py  crossref.py  file_download.py  file_downloader.py  file_management.py  file_utils.py  simple_journal_mapper.py  utils.py
templates/: article_form.html  article_preview_form.html  base.html  index.html  register.html  register_new.html  register_orig.html  search.html
tests/: D5OB00519A.json  acs.joc.5c00313.json  bjoc.21.83.json  conftest.py  test_crud.py  test_crud_integration.py  test_database_setup.py  test_schemas.py
tests/test_api/: test_api.py  test_api_demo.py  test_articles_unified.py  test_file_api.py
tests/test_services/: test_crossref.py  test_crossref_demo.py  test_crossref_publishers.py  test_file_demo.py  test_file_management.py  test_runner_simple.py
